fixed tabs alignment to right

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -124,6 +124,11 @@ img{
 body {
     margin-bottom: 50px;
 }
+
+.nav-tabs, .nav-pills {
+    text-align: right;
+}
+
 /****    *******/
 .voffset  { margin-top: 2px; }
 .voffset1 { margin-top: 5px; }
